crates/apollo_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_3820.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 14
- 236
- 1
- 6
- 0
- 0
- 0
- 0
- 0
- 0

