crates/apollo_storage/src/serialization/snapshots/papyrus_storage__serialization__serializers_test__hints_regression_hint_3847.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 15
- 7
- 1
- 6
- 1
- 0
- 0
- 1
- 248
- 255

